[project]
name = "hashword"
version = "0.1.0"
authors = [{ name = "Dominic Maluskid", email = "dominic.maluski@gmail.com" }]
description = "Hashword is a program to help you hash passwords with seeds, and keep track of them."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/maluskid/hashword"
Issues = "https://github.com/maluskid/hashword/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
hashword = "hashword.main:main"
